Add code quality tools and CI/CD
- Add comprehensive compiler warnings to CMakeLists.txt
- Add GitHub Actions CI workflow:
  - Static analysis (cppcheck, Flawfinder)
  - Multi-version ESP-IDF build tests (v5.1.2, v5.2.1, latest)
  - Multi-target builds (ESP32, ESP32-S3, ESP32-C3)
  - Compiler warning checks

Implements embedded C security and reliability best practices.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,19 @@ idf_component_register(
     INCLUDE_DIRS "include"
     REQUIRES driver esp_timer
 )
+
+# Add comprehensive compiler warnings for code quality
+target_compile_options(${COMPONENT_LIB} PRIVATE
+    -Wall              # Enable common warnings
+    -Wextra            # Enable extra warnings
+    -Wconversion       # Warn on implicit type conversions
+    -Wshadow           # Warn on variable shadowing
+    -Wformat=2         # Strict format string checking
+    -Wformat-security  # Warn on format string vulnerabilities
+    -Werror=format-security  # Make format security issues errors
+    -Wimplicit-fallthrough   # Warn on switch fallthrough
+    -Wunused           # Warn on unused variables/functions
+    -Wuninitialized    # Warn on uninitialized variables
+    -Wstrict-prototypes      # Require C function prototypes
+    -Wmissing-prototypes     # Warn on missing function prototypes
+)
