fix(ci): optimize build matrix to reduce CI time
Changes:
- Reduced from 9 builds (3 versions × 3 targets) to 3 builds
- Test latest ESP-IDF with ESP32-S3 and ESP32-C3
- Test v5.2.1 with ESP32 (most common configuration)
- Set fail-fast: false to prevent cascading failures
- Improves CI name to show both version and target

This reduces CI time and GitHub Actions minutes while still
providing good coverage across different ESP32 variants.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,20 @@ jobs:
             flawfinder-report.txt
 
   build-test:
-    name: Build Test (ESP-IDF ${{ matrix.idf-version }})
+    name: Build Test (ESP-IDF ${{ matrix.idf-version }}, ${{ matrix.idf-target }})
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false  # Don't cancel other jobs if one fails
       matrix:
-        idf-version: ['v5.1.2', 'v5.2.1', 'latest']
-        idf-target: ['esp32', 'esp32s3', 'esp32c3']
+        # Reduced matrix: test latest ESP-IDF with each target
+        # and v5.2.1 with ESP32 (most common)
+        include:
+          - idf-version: 'v5.2.1'
+            idf-target: 'esp32'
+          - idf-version: 'latest'
+            idf-target: 'esp32s3'
+          - idf-version: 'latest'
+            idf-target: 'esp32c3'
 
     steps:
       - name: Checkout repository
